# git-secret-scanner

./: .gitignore  .golangci.yaml  .goreleaser.yaml  Dockerfile  Makefile  README.md  go.mod  go.sum  hatch.toml  main.go  pyproject.toml  pyrightconfig.json  renovate.json  requirements.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: build-and-push.yaml  ci.yaml  ci.yml  release.yaml  release.yml  workflows.yml
cmd/: root.go  version.go
cmd/scan/: github.go  gitlab.go  scm.go
cmd/scm/: github.go  gitlab.go  scm.go
internal/logging/: logging.go
internal/progress/: progressbar.go  task.go  task_test.go
internal/report/: base.go  csv.go  csv_test.go  json.go  json_test.go
internal/report/secret/: kind.go  secret.go  secret_test.go  set.go  set_test.go
internal/scan/: baseline.go  baseline_test.go  fingerprints.go  fingerprints_test.go  scan.go
internal/scan/scanners/: ignore.go  ignore_test.go
internal/scm/: base.go  github.go  github_test.go  gitlab.go  gitlab_test.go
internal/scm/git/: clone.go  diff.go  fetch.go  url.go  url_test.go
internal/utils/: path.go  path_test.go  version.go  version_test.go
src/: cli.py  git.py  main.py  scan.py  scanners.py  secret.py
src/git_secret_scanner/: __main__.py  cli.py  console.py  constants.py  git.py  report.py  scan.py  scanners.py  secret.py
src/git_secret_scanner/report/: __init__.py  report.py  secret_kind.py
src/git_secret_scanner/scanners/: __init__.py  base.py  gitleaks.py  scanner.py  trufflehog.py
src/git_secret_scanner/scm/: git.py  (+3 more)
test/testdata/: .fingerprintsignore  baseline.csv
(+12 files in other folders)
